added Adaptive main-page

--- a/POIARCHE/src/components/header&hero.pug
+++ b/POIARCHE/src/components/header&hero.pug
@@ -13,11 +13,11 @@
           a.header__link(href="/") о нас
           a.header__link(href="/") контакты
 
-          button.header__burger.none(id="burger-btn")
-            svg.header__burger-icon.burger-icon(viewBox="0 0 44 44" width="44" height="44")
-              use(xlink:href="#burger")
-            svg.header__burger-icon.close-icon(viewBox="0 0 24 24" width="24" height="24")
-              use(xlink:href="#close")
+        button.header__burger.none(id="burger-btn")
+          svg.header__burger-icon.burger-icon(width="30" height="9" viewBox="0 0 30 9")
+            use(xlink:href="#burger")
+          svg.header__burger-icon.close-icon(viewBox="0 0 24 24" width="24" height="24")
+            use(xlink:href="#close")
 
         .burger-menu.none
           nav.burger-menu__links
