--- a/POIARCHE/src/styles/components/btn.scss
+++ b/POIARCHE/src/styles/components/btn.scss
@@ -74,4 +74,12 @@
             fill: var(--main--active);
         }
     }
+
+    @include xs {
+        font-size: rem(22);
+    }
+
+    @include xxs {
+        padding: rem(10) rem(20);
+    }
 }
