--- a/POIARCHE/src/styles/components/header&hero.scss
+++ b/POIARCHE/src/styles/components/header&hero.scss
@@ -20,27 +20,59 @@
     }
 
     &__link {
-        font-family: Pixeloid-Sans;
-        font-size: rem(18);
-        line-height: 135%;
-        color: var(--black);
-        transition: color .2s ease-in-out;
+        @include link;
 
         &:not(:last-child) {
             margin-right: rem(50);
         }
+    }
 
-        &:hover {
-            color: var(--main);
+    &__burger {
+        display: none;
+        align-items: center;
+        justify-content: center;
+        flex: 0 0 auto;
+        width: rem(30);
+        height: rem(8);
+        margin-left: auto;
+        padding-bottom: rem(7);
+        border: none;
+        background: transparent;
+        cursor: pointer;
+        z-index: 101;
+    
+        .burger-icon {
+          opacity: 1;
+        }
+    
+        .close-icon {
+          opacity: 0;
+        }
+    
+        &.active {
+          .burger-icon {
+            opacity: 0;
+          }
+    
+          .close-icon {
+            opacity: 1;
+          }
+        }
+      }
+    
+      &__burger-icon {
+        position: absolute;
+        stroke: var(--primary-color);
+        transition: 0.25s;
+      }
+
+    @include md {
+        &__nav {
+            display: none;
         }
 
-        &:focus {
-            outline: none;
-            color: var(--main);
-        }
-
-        &:active {
-            color: var(--main--active);
+        &__burger {
+            display: flex;
         }
     }
 }
@@ -67,3 +99,37 @@
         text-align: left;
     }
 }
+
+.burger-menu {
+    position: absolute;
+    top: rem(9);
+    right: rem(10);
+    width: rem(375);
+    padding: rem(20);
+    transform: translate(rem(-2000), 0);
+    transition: .25s ease-in-out;
+    background-color: var(--light-100);
+    border-radius: rem(10);
+    box-shadow: 0 rem(6) rem(36) rgba(0, 0, 0, 0.15);
+    z-index: 100;
+    visibility: hidden;
+  
+    &__links {
+      @include flex-column;
+    }
+  
+    &__link {
+      @include link;
+      margin-bottom: rem(20);
+  
+      &.site-link {
+        font-weight: 500;
+        color: var(--black);
+      }
+    }
+  
+    &.show {
+      visibility: visible;
+      transform: translate(0, 0);
+    }
+  }
