--- a/POIARCHE/src/styles/pages/index.scss
+++ b/POIARCHE/src/styles/pages/index.scss
@@ -3,15 +3,23 @@
 }
 
 .portfolio {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: rem(25);
+    @include grid3;
+
+    @include e-md {
+        grid-template-columns: repeat(2, 1fr);
+
+        & .portfolio-card:nth-last-child(-n+2) {
+            display: none;
+        }
+    }
+
+    @include s {
+        @include flex-column;
+    }
 }
 
 .service {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: rem(25);
+    @include grid3;
 
     & .service-card:nth-child(2) {
         grid-column: 2 / 4;
@@ -24,12 +32,44 @@
     & .service-card:nth-child(4) {
         grid-column: 1 / 3;
     }
+
+    @include e-md {
+        grid-template-columns: 1.5fr 1fr 1.5fr;
+    }
+
+    @include md {
+        grid-template-columns: repeat(2, 1fr);
+
+        & .service-card:nth-child(2),
+        & .service-card:nth-child(4) {
+            grid-column: auto;
+        }
+
+        & .service-card:nth-child(3) {
+            grid-column: 1 / 3;
+        }
+    }
+
+    @include s {
+        @include flex-column;
+    }
 }
 
 .jobs {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: rem(25);
+    @include grid3;
+
+    @include e-md {
+        display: flex;
+        flex-wrap: nowrap;
+
+        & .job-card {
+            flex-shrink: 0;
+        }
+    }
+
+    @include xs {
+        @include flex-column;
+    }
 }
 
 .about {
@@ -51,6 +91,10 @@
     &__title {
         @include card-title;
         margin-bottom: rem(100);
+
+        &--mb {
+            margin-bottom: 0;
+        }
     }
 
     &__dscr {
@@ -85,6 +129,75 @@
     &__bottom-text {
         display: flex;
     }
+
+    @include e-md {
+        &__middle {
+            display: grid;
+            grid-template-columns: 1.65fr 2fr;
+            column-gap: rem(30);
+        }
+
+        &__img-middle {
+            height: 100%;
+        }
+
+        &__middle-text {
+            margin-right: 0;
+        }
+
+        &__img-bottom {
+            min-height: rem(490);
+        }
+
+        &__bottom {
+            @include flex-column;
+        }
+
+        &__title--mb {
+            margin-bottom: rem(20);
+        }
+    }
+
+    @include md {
+        &__middle {
+            grid-template-columns: repeat(2, 1fr);
+            column-gap: rem(20);
+        }
+    }
+
+    @include s {
+        &__middle {
+            @include flex-column;
+        }
+
+        &__img-middle {
+            order: -1;
+            margin-bottom: rem(40);
+        }
+
+        &__title {
+            margin-bottom: rem(40);
+        }
+
+        &__bottom-text {
+            flex-direction: column;
+        }
+
+        &__dscr--mr {
+            margin-right: 0;
+            margin-bottom: rem(20);
+        }
+
+        &__img-top {
+            margin-bottom: rem(40);
+        }
+    }
+
+    @include xs {
+        &__title {
+            margin-bottom: rem(20);
+        }
+    }
 }
 
 .contact {
@@ -102,7 +215,12 @@
     }
 
     &__btn {
-        padding: rem(28) rem(30);
+        padding: rem(20) rem(30);
         font-size: rem(30);
+    }
+
+    @include s {
+        @include flex-column;
+        gap: rem(35);
     }
 }
