--- a/POIARCHE/src/components/footer.pug
+++ b/POIARCHE/src/components/footer.pug
@@ -1,11 +1,11 @@
 .footer
     .container
         .footer__up 
-            a.footer__link(href="/") кейсы
-            a.footer__link(href="/") услуги
-            a.footer__link(href="/") вакансии
-            a.footer__link(href="/") о нас
-            a.footer__link(href="/") контакты
+            a.footer__link(href="#portfolio") кейсы
+            a.footer__link(href="#service") услуги
+            a.footer__link(href="#job") вакансии
+            a.footer__link(href="#about") о нас
+            a.footer__link(href="#contact") контакты
         .footer__down 
             span.footer__dscr © дизайн–студия поярче. 2023
             .footer__social 
