--- a/POIARCHE/src/components/mixins/serviceCard.pug
+++ b/POIARCHE/src/components/mixins/serviceCard.pug
@@ -11,6 +11,6 @@ mixin serviceCard(svg, title, listItems)
                 each list in listItems
                     li.service-card__item=list
         .service-card__bottom
-            +btn('service-card__btn') Оставить заявку
+            +btn('service-card__btn order-btn') Оставить заявку
               svg.service-card__arrow.blue-arrow(width="21" height="23" viewBox="0 0 21 23")
                 use(xlink:href=`#blueArrow`)
