--- a/POIARCHE/src/styles/components/header&hero.scss
+++ b/POIARCHE/src/styles/components/header&hero.scss
@@ -1,135 +1,146 @@
 .header-hero {
-    background: url('../images/header&hero-bg.jpg') center center/ cover no-repeat;
+  background: url('../images/header&hero-bg.jpg') center center/ cover no-repeat;
 }
 
 .header {
-    &__container {
-        @include flex-row;
-        padding-top: rem(60);
-        padding-bottom: rem(25);
+  &__container {
+    @include flex-row;
+    padding-top: rem(60);
+    padding-bottom: rem(25);
+  }
+
+  &__logo {
+    max-height: rem(23);
+  }
+
+  &__nav {
+    @include flex-row;
+    margin-left: auto;
+    padding-bottom: rem(6);
+  }
+
+  &__link {
+    @include link;
+
+    &:not(:last-child) {
+      margin-right: rem(50);
+    }
+  }
+
+  &__burger {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 auto;
+    width: rem(30);
+    height: rem(8);
+    margin-left: auto;
+    padding-bottom: rem(7);
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    z-index: 101;
+
+    .burger-icon {
+      opacity: 1;
     }
 
-    &__logo {
-        max-height: rem(23);
+    .close-icon {
+      opacity: 0;
     }
 
+    &.active {
+      .burger-icon {
+        opacity: 0;
+      }
+
+      .close-icon {
+        opacity: 1;
+      }
+    }
+  }
+
+  &__burger-icon {
+    position: absolute;
+    stroke: var(--primary-color);
+    transition: 0.25s;
+  }
+
+  @include md {
     &__nav {
-        @include flex-row;
-        margin-left: auto;
-        padding-bottom: rem(6);
-    }
-
-    &__link {
-        @include link;
-
-        &:not(:last-child) {
-            margin-right: rem(50);
-        }
+      display: none;
     }
 
     &__burger {
-        display: none;
-        align-items: center;
-        justify-content: center;
-        flex: 0 0 auto;
-        width: rem(30);
-        height: rem(8);
-        margin-left: auto;
-        padding-bottom: rem(7);
-        border: none;
-        background: transparent;
-        cursor: pointer;
-        z-index: 101;
-    
-        .burger-icon {
-          opacity: 1;
-        }
-    
-        .close-icon {
-          opacity: 0;
-        }
-    
-        &.active {
-          .burger-icon {
-            opacity: 0;
-          }
-    
-          .close-icon {
-            opacity: 1;
-          }
-        }
-      }
-    
-      &__burger-icon {
-        position: absolute;
-        stroke: var(--primary-color);
-        transition: 0.25s;
-      }
-
-    @include md {
-        &__nav {
-            display: none;
-        }
-
-        &__burger {
-            display: flex;
-        }
+      display: flex;
     }
-}
+  }
 
-.hero {
-    padding-bottom: rem(60);
-    padding-top: rem(74);
-    
+  @include xs {
     &__container {
-        @include flex-column;
-        align-items: center;
+      padding-top: rem(25);
     }
-
-    &__dscr {
-        @include dscr;
-        max-width: rem(320);
-        margin-bottom: rem(166);
-        text-align: center;
-        color: var(--black);
-    }
-
-    &__btn {
-        align-self: stretch;
-        text-align: left;
-    }
+  }
 }
 
 .burger-menu {
-    position: absolute;
-    top: rem(9);
-    right: rem(10);
-    width: rem(375);
-    padding: rem(20);
-    transform: translate(rem(-2000), 0);
-    transition: .25s ease-in-out;
-    background-color: var(--light-100);
-    border-radius: rem(10);
-    box-shadow: 0 rem(6) rem(36) rgba(0, 0, 0, 0.15);
-    z-index: 100;
-    visibility: hidden;
-  
-    &__links {
-      @include flex-column;
-    }
-  
-    &__link {
-      @include link;
-      margin-bottom: rem(20);
-  
-      &.site-link {
-        font-weight: 500;
-        color: var(--black);
-      }
-    }
-  
-    &.show {
-      visibility: visible;
-      transform: translate(0, 0);
-    }
+  position: absolute;
+  top: rem(110);
+  left: var(--x-offset-main);
+  width: calc(100% - var(--x-offset-main) * 2);
+  padding: rem(20);
+  transform: translate(rem(-2000), 0);
+  transition: .25s ease-in-out;
+  background-color: var(--bg);
+  z-index: 100;
+  visibility: hidden;
+
+  &__links {
+    @include flex-column;
+    text-align: center;
   }
+
+  &__link {
+    @include link;
+    padding: rem(24) rem(16);
+    border: rem(2) solid var(--grey);
+    margin-bottom: rem(15);
+  }
+
+  &.show {
+    visibility: visible;
+    transform: translate(0, 0);
+  }
+
+  @include xs {
+    top: rem(70);
+  }
+}
+
+.burger-wrraper {
+  @include wrraper;
+  display: none;
+}
+
+.hero {
+  padding-bottom: rem(60);
+  padding-top: rem(74);
+
+  &__container {
+    @include flex-column;
+    align-items: center;
+  }
+
+  &__dscr {
+    @include dscr;
+    max-width: rem(320);
+    margin-bottom: rem(166);
+    text-align: center;
+    color: var(--black);
+  }
+
+  &__btn {
+    align-self: stretch;
+    text-align: left;
+  }
+}
