--- a/POIARCHE/src/styles/components/modalForOrder.scss
+++ b/POIARCHE/src/styles/components/modalForOrder.scss
@@ -1,21 +1,8 @@
 .modal-order {
-    display: block;
-
-    &--active {
-        display: block;
-    }
+    display: none;
 
     &__wrraper {
-        position: fixed;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        background-color: rgba(0, 0, 0, 0.8);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 100;
+        @include wrraper;
     }
 
     &__card {
@@ -30,8 +17,15 @@
 
     &__close {
         position: absolute;
+        fill: var(--grey);
         top: rem(20);
         right: rem(20);
+        cursor: pointer;
+        transition: fill .25s ease-in-out;
+
+        &:hover {
+            fill: var(--black);
+        }
     }
 
     &__label--position {
