--- a/POIARCHE/src/styles/mixins.scss
+++ b/POIARCHE/src/styles/mixins.scss
@@ -60,3 +60,16 @@
         color: var(--main--active);
     }
 }
+
+@mixin wrraper {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
