--- a/POIARCHE/src/styles/components/portfolioCard.scss
+++ b/POIARCHE/src/styles/components/portfolioCard.scss
@@ -1,4 +1,5 @@
 .portfolio-card {
+    position: relative;
 
     &__title {
         @include card-title;
@@ -8,4 +9,19 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
     }
+
+    &__link {
+        display: block;
+        position: absolute;
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 100;
+        cursor: pointer;
+    }
+
 }
