--- a/UNKILL/src/styles/colors.scss
+++ b/UNKILL/src/styles/colors.scss
@@ -1,10 +1,11 @@
 :root {
-    --main: #0200BF;
-    --main--active: #003cff;
-    --bg: #E3E3E3;
-    --black: #2E2E2E;
+    --main: #00F;
+    --main-active: #1818dc;
+    --bg: #F9F9F9;
+    --black: #333;
     --white: #FFF;
-    --grey: #A0A0A0;
+    --grey: #9F9F9F;
+    --light-grey: #EDEDED;
 }
 
 
