--- a/UNKILL/src/styles/components/header.scss
+++ b/UNKILL/src/styles/components/header.scss
@@ -1,81 +1,271 @@
 .header {
+  padding: inRem(30) 0;
+
+  &__container {
+    @include flex-row;
+    justify-content: space-between;
+    background-color: var(--white);
+  }
+
+  &__link.active {
+    color: var(--main);
+  }
+
+  &__link,
+  .burger-menu__link {
+    font-size: inRem(20);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+    color: var(--black);
+    transition: color .25s ease-in-out;
+
+    &:not(:last-child) {
+      margin-right: inRem(32);
+    }
+
+    &:hover {
+      color: var(--main);
+    }
+
+    &:focus {
+      color: var(--main);
+      outline: none;
+    }
+
+    &:active {
+      color: var(--main-active);
+    }
+  }
+
+  &__shop,
+  .burger-menu__shop {
+    @include flex-row;
+  }
+
+  &__shop-icon {
+    margin-right: inRem(15);
+  }
+
+  &__shop-link {
+    margin-right: inRem(50);
+    font-size: inRem(18);
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    color: var(--main);
+
+    &:hover {
+      border-bottom: 1px solid var(--main);
+    }
+
+    &:focus {
+      border-bottom: 1px solid var(--main);
+      outline: none;
+    }
+  }
 
   &__burger {
     display: none;
     align-items: center;
     justify-content: center;
     flex: 0 0 auto;
-    width: rem(30);
-    height: rem(8);
+    width: inininRem(30);
+    height: inininRem(8);
     margin-left: auto;
-    padding-bottom: rem(7);
+    padding-bottom: inininRem(7);
     border: none;
     background: transparent;
     cursor: pointer;
     z-index: 101;
+  }
 
-    .burger-icon {
-      opacity: 1;
+  @include e-md {
+    &__nav {
+      display: none;
     }
 
-    .close-icon {
-      opacity: 0;
+    &__select {
+      display: block;
     }
 
-    &.active {
-      .burger-icon {
-        opacity: 0;
-      }
-
-      .close-icon {
-        opacity: 1;
-      }
+    &__btn {
+      margin-right: inRem(30);
     }
   }
 
-  &__burger-icon {
-    position: absolute;
-    stroke: var(--primary-color);
-    transition: 0.25s;
+  @include md {
+    &__btn {
+      margin-right: 0;
+    }
+
+    &__shop-link {
+      margin-right: inRem(20);
+    }
+  }
+
+  @include s {
+    &__select {
+      display: none;
+    }
+
+    &__burger {
+      display: flex;
+    }
+
+    &__shop {
+      display: none;
+    }
   }
 }
 
+.select {
+  max-width: inRem(160);
+  position: relative;
+  z-index: 10;
+
+  &:hover .select__input {
+    color: var(--main);
+  }
+
+  &:hover .select__icon {
+    fill: var(--main);
+  }
+
+  &:active .select__input {
+    color: var(--main-active);
+  }
+
+  &:active .select__icon {
+    fill: var(--main-active);
+  }
+
+  &__icon {
+    fill: var(--black);
+    transition: fill .25s ease-in-out;
+  }
+
+  &__backdrop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: transparent;
+    z-index: -1;
+    display: none;
+  }
+
+  &.open {
+    .select__dropdown {
+      display: block;
+    }
+
+    .select__input {
+      border-bottom: none;
+    }
+
+    .select__backdrop {
+      display: block;
+    }
+  }
+
+  &__input {
+    display: flex;
+    align-items: center;
+    height: inRem(60);
+    padding: inRem(23) inRem(20);
+    border-radius: inRem(20);
+    border: none;
+    font-size: inRem(18);
+    font-weight: 500;
+    line-height: normal;
+    color: var(--black);
+    cursor: pointer;
+    transition: color .25s ease-in-out;
+
+    span {
+      margin-right: inRem(15);
+      pointer-events: none;
+    }
+  }
+
+  &__dropdown {
+    display: none;
+    position: absolute;
+    border: none;
+    border-radius: inRem(20);
+    top: inRem(60);
+    left: 0;
+    right: 0;
+    box-shadow: rgba(0, 0, 0, 0.35) 0 inRem(5) inRem(15);
+    background-color: var(--white);
+    z-index: 10;
+
+    .select__list {
+      list-style: none;
+      margin: 0;
+      padding: inRem(20);
+
+      .select__item {
+        cursor: pointer;
+        font-size: inRem(20) inRem(18);
+        font-weight: 400;
+        line-height: 140%;
+        color: var(--black);
+        transition: color .2s ease-in-out;
+
+        &:not(:last-child) {
+          margin-bottom: inRem(32);
+        }
+
+        &.selected {
+          background-color: var(--bg);
+        }
+
+        &:hover {
+          color: var(--main);
+        }
+      }
+    }
+  }
+}
+
+.open .select__icon {
+  transform: rotate(180deg);
+}
+
 .burger-menu {
-  position: absolute;
-  top: rem(110);
-  left: var(--x-offset-main);
-  width: calc(100% - var(--x-offset-main) * 2);
-  padding: rem(20);
-  transform: translate(rem(-2000), 0);
-  transition: .25s ease-in-out;
-  background-color: var(--bg);
+  @include flex-column;
+  position: relative;
+  padding: inRem(25);
+  background-color: var(--white);
+  border-radius: inRem(30);
   z-index: 100;
-  visibility: hidden;
 
   &__links {
     @include flex-column;
-    text-align: center;
+    gap: inRem(32);
+    margin-bottom: inRem(40);
   }
 
   &__link {
-    @include link;
-    padding: rem(24) rem(16);
-    border: rem(2) solid var(--grey);
-    margin-bottom: rem(15);
+    margin-right: 0;
+    align-self: flex-start;
   }
 
-  &.show {
-    visibility: visible;
-    transform: translate(0, 0);
+  &__shop {
+    margin-bottom: inRem(16);
   }
 
-  @include xs {
-    top: rem(70);
+  &__icon {
+    position: absolute;
+    top: inRem(20);
+    right: inRem(20);
+    cursor: pointer;
   }
 }
 
 .burger-wrraper {
-  @include wrraper;
-  display: none;
+  @include wrraper; 
 }
-
