--- a/UNKILL/src/styles/fonts.scss
+++ b/UNKILL/src/styles/fonts.scss
@@ -7,17 +7,17 @@
 }
 
 @font-face {
-	font-family: Pixeloid-Mono;
+	font-family: Onest;
 	font-display: swap;
-	src: url("../fonts/Pixeloid-Mono.woff2") format("woff2"), url("../fonts/Pixeloid-Mono.woff") format("woff");
-	font-weight: 400;
+	src: url("../fonts/Onest-Medium.woff2") format("woff2"), url("../fonts/Onest-Medium.woff") format("woff");
+	font-weight: 500;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: Pixeloid-Sans;
+	font-family: Onest;
 	font-display: swap;
-	src: url("../fonts/Pixeloid-Sans.woff2") format("woff2"), url("../fonts/Onest-Sans.woff") format("woff");
-	font-weight: 400;
+	src: url("../fonts/Onest-Bold.woff2") format("woff2"), url("../fonts/Onest-Bold.woff") format("woff");
+	font-weight: 700;
 	font-style: normal;
 }
