--- a/UNKILL/src/pages/index.pug
+++ b/UNKILL/src/pages/index.pug
@@ -45,7 +45,7 @@ include ../components/mixins/bookCard
                   +bookCard(false, '4', 'Общества взаимного страхования', 'К.Е. Турбина · В.Н. Дядьков', ['аудио', 'аудио'], false, null)
                .swiper-slide.book-slide 
                   +bookCard(false, '5', 'Введение в перестрахование', 'Кристоф Пфайффер', ['текст', 'аудио'], false, null)
-               .swiper-slide.book-slide
+               .swiper-slide.book-slide.book-slide--center
                   a.btn.book-btn-slider(href="/") Смотреть всё →
          .el-center
             a.btn.book-btn(href="/") Смотреть всё →
