--- a/UNKILL/src/styles/styles.scss
+++ b/UNKILL/src/styles/styles.scss
@@ -135,6 +135,7 @@ img {
 @import './components/aboutCard';
 @import './components/numberCard';
 @import './components/bookCard';
+@import './components/swiper';
 
 @import './components/header';
 @import './pages/index';
