--- a/UNKILL/src/styles/pages/index.scss
+++ b/UNKILL/src/styles/pages/index.scss
@@ -143,6 +143,13 @@
     .book-slide {
         height: auto;
         width: 75%;
+
+        &--center {
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            width: 50%;
+        }
     }
 
     .book-btn {
@@ -220,6 +227,10 @@
         font-weight: 400;
         line-height: 140%;
         color: var(--grey);
+    }
+
+    &__list {
+        margin-bottom: inRem(45);
     }
 
     &__list--mb {
